--- a/src/app/ui/kendo/kendo.component.html
+++ b/src/app/ui/kendo/kendo.component.html
@@ -1,5 +1,5 @@
 <!-- <h1 class="text-center">KENDO PRACTICE</h1> -->
-<h3 class="text-center">Donut Chart</h3>
+<h3 class="text-center">Donut Chart ()</h3>
 <kendo-chart>
   <kendo-chart-series>
     <kendo-chart-series-item
