Adding Kendo Grid in Angular9

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     <kendo-appbar-section>
         <ul>
             <li routerLink="/ui"  routerLinkActive="active"><span>UI</span></li>
-            <li routerLink="/kendo" routerLinkActive="active"><span>Kendo Donut Chart</span></li>
+            <li routerLink="/kendo" routerLinkActive="active"><span>Kendo Donut Chart & Kendo Grid</span></li>
             <li routerLink="/Bar" routerLinkActive="active"><span>Kendo Bar Chart</span></li>
             <!-- <li routerLink="/grid" routerLinkActive="active"><span>Kendo Grid</span></li> -->
             <li routerLink="/material" routerLinkActive="active"><span>Mat Buttons & Forms </span></li>
